fix image stretch issue

--- a/scss/globals/image_reset.scss
+++ b/scss/globals/image_reset.scss
@@ -1,4 +1,4 @@
-img {
+main img {
 	max-width: 100%;
 	width: 100%;
 }
